# tabi-agentic-tutorial-2025

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  tabi-db.config.yml
searxng/: settings.yml
src/: __init__.py  demo_agents.py
src/clients/cli/: tabi_llm_app.py
src/clients/streamlit/: app.py  main.py
src/tabi_llm_agent/: __init__.py  agent.py  prompts.py  tools.py
src/tabi_llm_app/: __init__.py  chat_qa_engine.py  config.py  document_loader.py  qa_engine.py  utils.py  vector_db.py
